Fix contrast issues on focus states on contact page.

--- a/css/index.css
+++ b/css/index.css
@@ -1222,8 +1222,11 @@ button[type=submit]:active {
 }
 
 input:focus,
-textarea:focus {
-  border: 1px solid var(--ecto)
+textarea:focus,
+input:focus-visible,
+textarea:focus-visible {
+  border: 1px solid var(--ecto);
+
 }
 
 ::-webkit-input-placeholder {
